# dan

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.toml  fix_colors.py  refactor.py  rewrite_chrome.py  rewrite_editor.py  rustfmt.toml  scratch.rs  test  test-file.rs  test.txt
.agents/skills/dan-editor/: SKILL.md
.githooks/: commit-msg
.github/ISSUE_TEMPLATE/: bug_report.md
scripts/: list_themes.sh-old
src/: main.rs  recovery.rs  utils.rs
src/buffer/: config_loader.rs  history.rs  mod.rs  rope.rs
src/config/: mod.rs
src/editor/: commands.rs  cursor.rs  editing.rs  formatter.rs  mod.rs  mode.rs  navigation.rs  search.rs  selection.rs  viewport.rs  visual_col.rs
src/input/: mod.rs
src/render/: buffer.rs  chrome.rs  mod.rs  text.rs
src/syntax/: mod.rs
src/ui/: i18n.rs  layout.rs  mod.rs  overlay.rs  theme.rs
test-files/: iso_8859_1.txt  pure_ascii.txt  shift_jis.txt  utf8_with_bom.txt  windows_1252.txt
