[package]
name = "dan"
version = "0.2.50"
edition = "2021"
description = "Dan is a fast, friendly, and zero-fuss terminal text editor written in Rust"

[dependencies]
crossterm = "0.29"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
toml = "1.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
arboard = "3.4"
chardetng = "0.1"
encoding_rs = "0.8"
editorconfig = "1.0.0"
terminal-light = "1.8.0"
terminal-colorsaurus = "1.0.3"
syntect-assets = "0.23.6"
